<resources>
    <string name="app_name">ProjectM</string>
    <string name="appname">ProjectM</string>
    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices
        on ProjectM’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_description">Enter your name, email and password, to register with us.</string>
    <string name="sign_in_description">Enter your email and password, to sign in to your account.</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet_connection_message">Please check your internet connection and try again</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="please_wait_message">Please wait while we process your request</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign out</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_share">Share</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Name</string>

    <string name="phone_number">Phone Number</string>
    <string name="update">Update</string>
    <string name="my_profile_title">My Profile Title</string>

    <string name="create_board_title">Create Board</string>
    <string name="create_board_description">Create a new board to start collaborating with your team.</string>
    <string name="board_name">Board Name</string>
    <string name="create">Create</string>
    <string name="storage_permission_denied"> Storage Permission Denied</string>
    <string name="storage_permission_required">Please allow storage permission</string>
    <string name="no_boards_available">No boards are available!!</string>
    <string name="created_by">Created by: %s</string>
    <string name="my_profile">My profile</string>
    <string name="loading">Loading...</string>
    <string name="re_enter_your_password">Re-enter your password</string>

    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>

    <string name="members">Members</string>
    <string name="add_member">Add Member</string>
    <string name="search_emal">Search by email</string>
    <string name="add">Add</string>
    <string name="search">Search</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="delete_card">Delete Card</string>
    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="str_select_label_color">Select Label Color</string>
    <string name="str_select_member">Select Member</string>
    <string name="default_notification_channel_id">projemanag_notification_channel_id</string>
</resources>